internal/lang/test/testdata/errors/missing_required_field.scampi
module main

import "std/posix"

posix.copy { dest = "/tmp/foo" }
